--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,8 @@
 
 <main>
     <p>Conteudo da home</p>
-    <p>meu nome é : <%= nome %></p>
+    <p>meu nome é : <%= profile.nome %></p>
+    <p>estado civil : <%= profile.marital_status %></p>
 </main>
 
 <footer>Todos os direitos reservados | Infnet Bootcamp 2021</footer>
